fixes #7: subnav toggles with main nav on mobile

--- a/public/content/themes/bci/style/sass/_layout.scss
+++ b/public/content/themes/bci/style/sass/_layout.scss
@@ -253,9 +253,17 @@ nav.contact .menu {
       padding: 0;
     }
 
-    .page-subnav {
+    nav.page-subnav {
       line-height: 1.8em;
       margin: 2rem 0;
+
+      @include breakpoint(max-small) {
+        display: none;
+
+        &.expand {
+          display: block;
+        }
+      }
 
       ul {
         padding: 0;
